extracted contents from zip files and cleaned up. Preparing to filter images into labeled folders

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "4eb4b5e8-d993-4205-a9d7-8c80b32069e7",
    "metadata": {},
    "outputs": [],
@@ -21,11 +21,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17425ab1-8b7d-4ae5-befb-364bc481ab8e",
+   "id": "4143dbe4-0a5a-4c35-aa58-b4ef8e37016e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zip_files ="
+    "# Unzip the data and remove the zipped files\n",
+    "zip_outer = zipfile.ZipFile(zip_path,'r')\n",
+    "zip_outer.extractall(data_path)\n",
+    "zip_outer.close()\n",
+    "\n",
+    "zip_train = zipfile.ZipFile(f\"{data_path}\\\\train.zip\")\n",
+    "zip_train.extractall(data_path)\n",
+    "zip_train.close()\n",
+    "\n",
+    "zip_test = zipfile.ZipFile(f\"{data_path}\\\\test1.zip\")\n",
+    "zip_test.extractall(data_path)\n",
+    "zip_test.close()\n",
+    "\n",
+    "del zip_outer, zip_train, zip_test\n",
+    "\n",
+    "os.remove(f\"{data_path}\\\\train.zip\")\n",
+    "os.remove(f\"{data_path}\\\\test1.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "be896e49-163c-4085-a55f-cec53f3c09df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create filter directories for training and validation\n",
+    "dir_train_cats = os.path.join(data_path,'train','cats')\n",
+    "dir_train_dogs = os.path.join(data_path,'train','dogs')\n",
+    "\n",
+    "dir_validation = os.path.join(data_path,'validation')\n",
+    "dir_val_cats = os.path.join(dir_validation, 'cats')\n",
+    "dir_val_dogs = os.path.join(dir_validation, 'dogs')\n",
+    "\n",
+    "os.mkdir(dir_train_cats)\n",
+    "os.mkdir(dir_train_dogs)\n",
+    "os.mkdir(dir_validation)\n",
+    "os.mkdir(dir_val_cats)\n",
+    "os.mkdir(dir_val_dogs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be713107-87df-4ba5-9aa3-00b451e7b73f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter files into the correct directories, and split portion of random files from the training data into a validation set\n",
+    "\n",
+    "def filter_images()"
    ]
   }
  ],
