completed functions to prepare image directories for tensorflow

--- a/main.ipynb
+++ b/main.ipynb
@@ -20,12 +20,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "802eedf4-e58b-4b0c-bbd1-94cbf8fbc84c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def move_image(source,destination,image_name):\n",
+    "     shutil.move(os.path.join(source,image_name),\n",
+    "                 os.path.join(destination,image_name),\n",
+    "                 copy_function=copyfile)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2fc795f6-3b23-45c4-a67c-4283930c56a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sort_images(source_path,cat_path,dog_path,index_limit):\n",
+    "    for index,fname in enumerate(os.listdir(source_path)):\n",
+    "        if index < index_limit:\n",
+    "            move_image(source_path,cat_path,fname)\n",
+    "        else:\n",
+    "            move_image(source_path,dog_path,fname)\n",
+    "    \n",
+    "    shutil.rmtree(source_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "be713107-87df-4ba5-9aa3-00b451e7b73f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter files into the correct directories, and split portion of random files from the training data into a validation set\n",
+    "\n",
+    "def filter_images(source, training, testing, split_size):\n",
+    "    \n",
+    "    dir_source = os.listdir(source)\n",
+    "    \n",
+    "    def choose_random(source, split_size):\n",
+    "        source_range = range(0, int(len(dir_source)))\n",
+    "        training_size = int(split_size * len(dir_source))\n",
+    "        training_index = random.sample(source_range,k=training_size)\n",
+    "        \n",
+    "        return training_index\n",
+    "    \n",
+    "    def copy_images(source,training,testing,random_index):\n",
+    "        for index,fname in enumerate(os.listdir(source)):\n",
+    "            if index in random_index:\n",
+    "                move_image(source,training,fname)\n",
+    "            else:\n",
+    "                move_image(source,testing,fname)\n",
+    "    \n",
+    "    random_index = choose_random(source,split_size)\n",
+    "    copy_images(source, training, testing, random_index)\n",
+    "    \n",
+    "    shutil.rmtree(source)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "4143dbe4-0a5a-4c35-aa58-b4ef8e37016e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Unzip the data and remove the zipped files\n",
+    "# Extract the image directories from the zip files\n",
     "zip_outer = zipfile.ZipFile(zip_path,'r')\n",
     "zip_outer.extractall(data_path)\n",
     "zip_outer.close()\n",
@@ -40,43 +105,107 @@
     "\n",
     "del zip_outer, zip_train, zip_test\n",
     "\n",
+    "# delete zip files to reclaim space\n",
     "os.remove(f\"{data_path}\\\\train.zip\")\n",
-    "os.remove(f\"{data_path}\\\\test1.zip\")"
+    "os.remove(f\"{data_path}\\\\test1.zip\")\n",
+    "#os.remove(zip_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "be896e49-163c-4085-a55f-cec53f3c09df",
+   "execution_count": 16,
+   "id": "99fabfd0-613e-4eea-941b-22814bb62d7d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create filter directories for training and validation\n",
-    "dir_train_cats = os.path.join(data_path,'train','cats')\n",
-    "dir_train_dogs = os.path.join(data_path,'train','dogs')\n",
+    "# initialize variables for training and validation directory paths\n",
+    "dir_toplevel = os.path.join(data_path,\"..\",\"dogs-vs-cats\")\n",
+    "dir_training = os.path.join(dir_toplevel,'training')\n",
+    "dir_training_cats = os.path.join(dir_training,'cats')\n",
+    "dir_training_dogs = os.path.join(dir_training,'dogs')\n",
     "\n",
-    "dir_validation = os.path.join(data_path,'validation')\n",
-    "dir_val_cats = os.path.join(dir_validation, 'cats')\n",
-    "dir_val_dogs = os.path.join(dir_validation, 'dogs')\n",
+    "dir_validation = os.path.join(dir_toplevel,'validation')\n",
+    "dir_validation_cats = os.path.join(dir_validation, 'cats')\n",
+    "dir_validation_dogs = os.path.join(dir_validation, 'dogs')\n",
     "\n",
-    "os.mkdir(dir_train_cats)\n",
-    "os.mkdir(dir_train_dogs)\n",
+    "dir_test = os.path.join(dir_toplevel,\"test\")\n",
+    "\n",
+    "# create directories for training and validation\n",
+    "tmp_train = os.path.join(data_path,\"train\")\n",
+    "tmp_cats = os.path.join(data_path,\"cats\")\n",
+    "tmp_dogs = os.path.join(data_path,\"dogs\")\n",
+    "tmp_test = os.path.join(data_path,\"test1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3038acf0-d9f5-47bb-8e3f-cf8086ce06ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create directories to hold filtered training and vaidation sets\n",
+    "os.mkdir(dir_toplevel)\n",
+    "os.mkdir(dir_training)\n",
+    "os.mkdir(dir_training_cats)\n",
+    "os.mkdir(dir_training_dogs)\n",
     "os.mkdir(dir_validation)\n",
-    "os.mkdir(dir_val_cats)\n",
-    "os.mkdir(dir_val_dogs)"
+    "os.mkdir(dir_validation_cats)\n",
+    "os.mkdir(dir_validation_dogs)\n",
+    "os.mkdir(tmp_cats)\n",
+    "os.mkdir(tmp_dogs)\n",
+    "os.mkdir(dir_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "461fbc14-c05c-4812-bfe3-8b131ddbfca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sort_images(tmp_test,dir_test,dir_test,12500)\n",
+    "\n",
+    "sort_images(tmp_train,tmp_cats,tmp_dogs,12500)\n",
+    "\n",
+    "\n",
+    "split_size = 0.9\n",
+    "filter_images(tmp_cats,dir_training_cats,dir_validation_cats,split_size)\n",
+    "filter_images(tmp_dogs,dir_training_dogs,dir_validation_dogs,split_size)\n",
+    "\n",
+    "move_image(data_path,dir_toplevel,\"sampleSubmission.csv\")\n",
+    "\n",
+    "shutil.rmtree(data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0130a110-9122-460e-9604-6a52d00d1077",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12500"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(os.listdir(dir_test))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be713107-87df-4ba5-9aa3-00b451e7b73f",
+   "id": "7b77fd88-11a9-4c8f-b67c-bfbd945f4acc",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# filter files into the correct directories, and split portion of random files from the training data into a validation set\n",
-    "\n",
-    "def filter_images()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
