added keras model for image classification

--- a/main.ipynb
+++ b/main.ipynb
@@ -20,6 +20,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "4143dbe4-0a5a-4c35-aa58-b4ef8e37016e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract the image directories from the zip files\n",
+    "zip_outer = zipfile.ZipFile(zip_path,'r')\n",
+    "zip_outer.extractall(data_path)\n",
+    "zip_outer.close()\n",
+    "\n",
+    "zip_train = zipfile.ZipFile(f\"{data_path}\\\\train.zip\")\n",
+    "zip_train.extractall(data_path)\n",
+    "zip_train.close()\n",
+    "\n",
+    "zip_test = zipfile.ZipFile(f\"{data_path}\\\\test1.zip\")\n",
+    "zip_test.extractall(data_path)\n",
+    "zip_test.close()\n",
+    "\n",
+    "del zip_outer, zip_train, zip_test\n",
+    "\n",
+    "# delete zip files to reclaim space\n",
+    "os.remove(f\"{data_path}\\\\train.zip\")\n",
+    "os.remove(f\"{data_path}\\\\test1.zip\")\n",
+    "#os.remove(zip_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "802eedf4-e58b-4b0c-bbd1-94cbf8fbc84c",
    "metadata": {},
@@ -85,34 +113,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "4143dbe4-0a5a-4c35-aa58-b4ef8e37016e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extract the image directories from the zip files\n",
-    "zip_outer = zipfile.ZipFile(zip_path,'r')\n",
-    "zip_outer.extractall(data_path)\n",
-    "zip_outer.close()\n",
-    "\n",
-    "zip_train = zipfile.ZipFile(f\"{data_path}\\\\train.zip\")\n",
-    "zip_train.extractall(data_path)\n",
-    "zip_train.close()\n",
-    "\n",
-    "zip_test = zipfile.ZipFile(f\"{data_path}\\\\test1.zip\")\n",
-    "zip_test.extractall(data_path)\n",
-    "zip_test.close()\n",
-    "\n",
-    "del zip_outer, zip_train, zip_test\n",
-    "\n",
-    "# delete zip files to reclaim space\n",
-    "os.remove(f\"{data_path}\\\\train.zip\")\n",
-    "os.remove(f\"{data_path}\\\\test1.zip\")\n",
-    "#os.remove(zip_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "id": "99fabfd0-613e-4eea-941b-22814bb62d7d",
    "metadata": {},
@@ -164,23 +164,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sort_images(tmp_test,dir_test,dir_test,12500)\n",
-    "\n",
+    "# sort labeled cat and dog images into separate folders, and move test data to new location\n",
     "sort_images(tmp_train,tmp_cats,tmp_dogs,12500)\n",
+    "sort_images(tmp_test,dir_test,dir_test,12500)\n",
+    "move_image(data_path,dir_toplevel,\"sampleSubmission.csv\")\n",
     "\n",
-    "\n",
+    "# randomly sample the images, and create separate training an validation sets\n",
+    "# percent of the images to be used for training is set by the split_size\n",
     "split_size = 0.9\n",
+    "\n",
     "filter_images(tmp_cats,dir_training_cats,dir_validation_cats,split_size)\n",
     "filter_images(tmp_dogs,dir_training_dogs,dir_validation_dogs,split_size)\n",
     "\n",
-    "move_image(data_path,dir_toplevel,\"sampleSubmission.csv\")\n",
-    "\n",
+    "#remove empty directory tree\n",
     "shutil.rmtree(data_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "0130a110-9122-460e-9604-6a52d00d1077",
    "metadata": {},
    "outputs": [
@@ -190,7 +192,7 @@
        "12500"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,8 +203,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "7b77fd88-11a9-4c8f-b67c-bfbd945f4acc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Keras model for image classification\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    # Alternating convolution and pooling layers to process the images before analysis\n",
+    "    # The convulation layers accent features from the images,\n",
+    "    # The pooling layers reduce the amount of information to process\n",
+    "    tf.keras.layers.Conv2D(16,(3,3), activation='relu', input_shape=(150,150,3)),\n",
+    "    tf.keras.layers.MaxPooling2D(2,2),\n",
+    "    tf.keras.layers.Conv2D(32,(3,3), activation='relu'),\n",
+    "    tf.keras.layers.MaxPooling2D(2,2),\n",
+    "    tf.keras.layers.Conv2D(64,(3,3), activation='relu'),\n",
+    "    tf.keras.layers.MaxPooling2D(2,2),\n",
+    "    # Flatten the images for analysis by the nn\n",
+    "    tf.keras.layers.Flatten(),\n",
+    "    # Neural network for image classification 256 neuron hidden layer, with a 1 nueron output layer\n",
+    "    tf.keras.layers.Dense(256, activation='relu'),\n",
+    "    tf.keras.layers.Dense(1, activation ='sigmoid')\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer=RMSprop(learning_rate=0.001), loss='binary_crossentropy', metrics=['acc'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50f8f606-c0f3-45a2-9105-c16326376705",
    "metadata": {},
    "outputs": [],
    "source": []
