initialized training and validation generators

--- a/main.ipynb
+++ b/main.ipynb
@@ -226,7 +226,9 @@
     "    tf.keras.layers.Dense(1, activation ='sigmoid')\n",
     "])\n",
     "\n",
-    "model.compile(optimizer=RMSprop(learning_rate=0.001), loss='binary_crossentropy', metrics=['acc'])"
+    "model.compile(optimizer=RMSprop(learning_rate=0.001),\n",
+    "              loss='binary_crossentropy',\n",
+    "              metrics=['acc'])"
    ]
   },
   {
@@ -235,7 +237,26 @@
    "id": "50f8f606-c0f3-45a2-9105-c16326376705",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Configure tensorflow to generate training data from image directory, and normalize the image data\n",
+    "train_datagen = ImageDataGenerator(rescale=1.0/255)\n",
+    "train_generator = train_datagen.flow_from_directory(dir_training,\n",
+    "                                                   batch_size = 10,\n",
+    "                                                   class_mode='binary',\n",
+    "                                                   target_size(150,150))\n",
+    "\n",
+    "# Configure tensorflow to generate validation data from image directory, and normalize the image data\n",
+    "validation_datagen = ImageDataGenerator(rescale=1.0/255) \n",
+    "validation_generator = validation_datagen.flow_from_directory(dir_validation,\n",
+    "                                                             batch_size = 10,\n",
+    "                                                             v)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Expected Output:\n",
+    "# Found 2700 images belonging to 2 classes.\n",
+    "# Found 300 images belonging to 2 classes."
+   ]
   }
  ],
  "metadata": {
