first pass, 70% validation accuracy

--- a/main.ipynb
+++ b/main.ipynb
@@ -233,30 +233,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "50f8f606-c0f3-45a2-9105-c16326376705",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 22500 images belonging to 2 classes.\n",
+      "Found 2500 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "# Configure tensorflow to generate training data from image directory, and normalize the image data\n",
     "train_datagen = ImageDataGenerator(rescale=1.0/255)\n",
     "train_generator = train_datagen.flow_from_directory(dir_training,\n",
     "                                                   batch_size = 10,\n",
     "                                                   class_mode='binary',\n",
-    "                                                   target_size(150,150))\n",
+    "                                                   target_size=(150,150))\n",
     "\n",
     "# Configure tensorflow to generate validation data from image directory, and normalize the image data\n",
     "validation_datagen = ImageDataGenerator(rescale=1.0/255) \n",
     "validation_generator = validation_datagen.flow_from_directory(dir_validation,\n",
     "                                                             batch_size = 10,\n",
-    "                                                             v)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Expected Output:\n",
-    "# Found 2700 images belonging to 2 classes.\n",
-    "# Found 300 images belonging to 2 classes."
+    "                                                             class_mode='binary',\n",
+    "                                                             target_size=(150,150))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "4e2cd3bb-ebbd-4f6e-a098-dcd9bb5704c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training.py:1940: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+      "  warnings.warn('`Model.fit_generator` is deprecated and '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "2250/2250 [==============================] - 334s 148ms/step - loss: 0.5693 - acc: 0.7088 - val_loss: 0.4783 - val_acc: 0.7824\n",
+      "Epoch 2/2\n",
+      "2250/2250 [==============================] - 232s 103ms/step - loss: 0.4670 - acc: 0.7831 - val_loss: 0.4887 - val_acc: 0.7752\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_model = model.fit(train_generator,\n",
+    "                                epochs=2,\n",
+    "                                verbose=1,\n",
+    "                                validation_data=validation_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe11c712-e844-4bd6-8d70-62a71efcd34e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1333eb7a-007c-4e94-92a8-1a3ef19f79c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
