pass 2 70% accuracy on validation set after 2 epochs

--- a/main.ipynb
+++ b/main.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "id": "7b77fd88-11a9-4c8f-b67c-bfbd945f4acc",
    "metadata": {},
    "outputs": [],
@@ -222,18 +222,18 @@
     "    # Flatten the images for analysis by the nn\n",
     "    tf.keras.layers.Flatten(),\n",
     "    # Neural network for image classification 256 neuron hidden layer, with a 1 nueron output layer\n",
-    "    tf.keras.layers.Dense(256, activation='relu'),\n",
+    "    tf.keras.layers.Dense(512, activation='relu'),\n",
     "    tf.keras.layers.Dense(1, activation ='sigmoid')\n",
     "])\n",
     "\n",
-    "model.compile(optimizer=RMSprop(learning_rate=0.001),\n",
+    "model.compile(optimizer=RMSprop(learning_rate=0.0005),\n",
     "              loss='binary_crossentropy',\n",
     "              metrics=['acc'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "id": "50f8f606-c0f3-45a2-9105-c16326376705",
    "metadata": {},
    "outputs": [
@@ -264,26 +264,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "4e2cd3bb-ebbd-4f6e-a098-dcd9bb5704c8",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training.py:1940: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
-      "  warnings.warn('`Model.fit_generator` is deprecated and '\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "2250/2250 [==============================] - 334s 148ms/step - loss: 0.5693 - acc: 0.7088 - val_loss: 0.4783 - val_acc: 0.7824\n",
+      "2250/2250 [==============================] - 312s 139ms/step - loss: 0.5657 - acc: 0.7108 - val_loss: 0.4836 - val_acc: 0.7620\n",
       "Epoch 2/2\n",
-      "2250/2250 [==============================] - 232s 103ms/step - loss: 0.4670 - acc: 0.7831 - val_loss: 0.4887 - val_acc: 0.7752\n"
+      "2226/2250 [============================>.] - ETA: 3s - loss: 0.4545 - acc: 0.7884"
      ]
     }
    ],
