updating paths for usage for colab

--- a/main.ipynb
+++ b/main.ipynb
@@ -29,17 +29,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "5FxvLVoleKAR",
-        "outputId": "c7288d55-c506-438b-e0cb-507ebb15db5e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "00d6c08e-3f2f-48d1-df83-b77bacc7145f"
       },
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "drive.mount(\"/content/drive\")"
       ],
       "id": "5FxvLVoleKAR",
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -53,23 +53,46 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PIrw4alLd3my",
-        "outputId": "c25ce0b7-2380-4624-e1f2-27c3b0860fe9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CdLlVWyDjjfw",
+        "outputId": "25641b34-2b5d-4ad1-90f2-9f146682a9a2"
       },
       "source": [
-        "%cd Image-Classification-Tensorflow/\n",
-        "\n"
+        "%cd \"drive/MyDrive/Colab Notebooks/Image-Classification-Tensorflow\"\n"
       ],
-      "id": "PIrw4alLd3my",
-      "execution_count": 15,
+      "id": "CdLlVWyDjjfw",
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "/content/drive/MyDrive/Colab Notebooks/Image-Classification-Tensorflow\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7-3PvJcni268",
+        "outputId": "74792ce5-3eaa-45f4-c61b-36b07b25e5c8"
+      },
+      "source": [
+        "%ls\n"
+      ],
+      "id": "7-3PvJcni268",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[0m\u001b[01;34mData\u001b[0m/  datapath.py  main.ipynb  \u001b[01;34m__pycache__\u001b[0m/  README.md\n"
           ],
           "name": "stdout"
         }
@@ -92,13 +115,48 @@
         "from datapath import data_path, zip_path"
       ],
       "id": "4eb4b5e8-d993-4205-a9d7-8c80b32069e7",
-      "execution_count": 16,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4143dbe4-0a5a-4c35-aa58-b4ef8e37016e"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 183
+        },
+        "id": "ir8mCyNkrXKL",
+        "outputId": "ad7ba4b5-675b-48eb-be5c-49d35e6355ef"
+      },
+      "source": [
+        "zip_train_path = os.path.join(data_path,\"train.zip\")\n",
+        "zip_test_path = os.path.join(data_path,\"test1.zip\")\n"
+      ],
+      "id": "ir8mCyNkrXKL",
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-d14f8056f81f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mzip_train_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_path\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"train.zip\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mzip_test_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_path\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"test1.zip\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'os' has no attribute 'join'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4143dbe4-0a5a-4c35-aa58-b4ef8e37016e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 357
+        },
+        "outputId": "8d34dc16-bdfa-42ca-df22-2d97a83b5233"
       },
       "source": [
         "# Extract the image directories from the zip files\n",
@@ -106,24 +164,37 @@
         "zip_outer.extractall(data_path)\n",
         "zip_outer.close()\n",
         "\n",
-        "zip_train = zipfile.ZipFile(f\"{data_path}\\\\train.zip\")\n",
+        "zip_train = zipfile.ZipFile(zip_train_path)\n",
         "zip_train.extractall(data_path)\n",
         "zip_train.close()\n",
         "\n",
-        "zip_test = zipfile.ZipFile(f\"{data_path}\\\\test1.zip\")\n",
+        "zip_test = zipfile.ZipFile(zip_test_path)\n",
         "zip_test.extractall(data_path)\n",
         "zip_test.close()\n",
         "\n",
         "del zip_outer, zip_train, zip_test\n",
         "\n",
         "# delete zip files to reclaim space\n",
-        "os.remove(f\"{data_path}\\\\train.zip\")\n",
-        "os.remove(f\"{data_path}\\\\test1.zip\")\n",
-        "#os.remove(zip_path)"
+        "os.remove(f\"{data_path}train.zip\")\n",
+        "os.remove(f\"{data_path}test1.zip\")\n",
+        "os.remove(zip_path)"
       ],
       "id": "4143dbe4-0a5a-4c35-aa58-b4ef8e37016e",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-65b1d1f18cde>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mzip_outer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mzip_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzipfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZipFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{data_path}\\\\train.zip\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mzip_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextractall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mzip_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.7/zipfile.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, file, mode, compression, allowZip64, compresslevel)\u001b[0m\n\u001b[1;32m   1238\u001b[0m             \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1239\u001b[0m                 \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1240\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilemode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1241\u001b[0m                 \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1242\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0mfilemode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodeDict\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Data/\\\\train.zip'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -203,7 +274,7 @@
       },
       "source": [
         "# initialize variables for training and validation directory paths\n",
-        "dir_toplevel = os.path.join(data_path,\"..\",\"dogs-vs-cats\")\n",
+        "dir_toplevel = os.path.join(data_path,\"dogs-vs-cats\")\n",
         "dir_training = os.path.join(dir_toplevel,'training')\n",
         "dir_training_cats = os.path.join(dir_training,'cats')\n",
         "dir_training_dogs = os.path.join(dir_training,'dogs')\n",
